<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AlbumCreateNew">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/labelAlbumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAlbumName" />
    <EditText
        android:id="@+id/textAlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/labelAlbumDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAlbumDesc" />
    <EditText
        android:id="@+id/textAlbumDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/buttonAlbumSave"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/labelAlbumSave"
        android:onClick="onClick"/>
    <TextView
        android:id="@+id/labelAlbumError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>